<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    tools:context=".FinalScoreActivity">

    <Button
        android:id="@+id/button_main_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#335DC8"
        android:fontFamily="@font/bungee"
        android:text="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_finalScore"
        android:layout_width="164dp"
        android:layout_height="70dp"
        android:fontFamily="@font/bungee"
        android:text="@string/example"
        android:textAlignment="center"
        android:textColor="?android:textColorPrimary"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.263" />

    <TextView
        android:id="@+id/tv_maxPuntuacion"
        android:layout_width="349dp"
        android:layout_height="296dp"
        android:background="#775081F6"
        android:fontFamily="@font/bungee"
        android:text="@string/max_scores"
        android:textColor="?android:textColorPrimary"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_finalScore"
        app:layout_constraintVertical_bias="0.058" />

    <TextView
        android:id="@+id/tv_message"
        android:layout_width="299dp"
        android:layout_height="83dp"
        android:fontFamily="@font/bungee"
        android:text="@string/example"
        android:textAlignment="center"
        android:textColor="?android:textColorPrimary"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_maxPuntuacion"
        app:layout_constraintVertical_bias="0.548" />

</androidx.constraintlayout.widget.ConstraintLayout>